[gd_scene load_steps=2 format=3 uid="uid://dvrt5s2ngi8mf"]

[ext_resource type="Script" uid="uid://gf0rv3puv4al" path="res://scripts/pausemenu.gd" id="1_3otxd"]

[node name="PAUSEMENU" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3otxd")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 150.0
offset_right = 600.0
offset_bottom = 450.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="RESUME" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RESTART" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="BACKTOMENU" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"

[connection signal="pressed" from="PanelContainer/VBoxContainer/RESUME" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RESTART" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BACKTOMENU" to="." method="_on_backtomenu_pressed"]
